--- a/monobass/monobass.css
+++ b/monobass/monobass.css
@@ -1,7 +1,9 @@
+/* Work in-progress */
 
 * { box-sizing: border-box }
 
 body {
+    font-family: 'Roboto Mono', sans-serif;
   font-family: Roboto, sans-serif;
   line-height: 1.625;
   margin: 0;
@@ -12,16 +14,16 @@ body {
 code, pre, samp, .mono {
   font-family: 'Roboto Mono', monospace;
 }
-a {
-  color: #08b;
-}
 
-/* Prototype */
-a {
+a:not(.btn) {
+  color: #08b;
   text-decoration: none;
   background-image: linear-gradient(transparent, transparent 93.75%, #0be 93.75%)
 }
-.btn { background-image: none }
+
+a:not(.btn):hover {
+  background-image: linear-gradient(transparent, transparent 87.5%, #0be 87.5%)
+}
 
 h1, h2, h3,
 h4, h5, h6 {
@@ -29,15 +31,37 @@ h4, h5, h6 {
   margin-bottom: .5em;
 }
 
-h1, .h1 { font-size: 2rem }
+h1, .h1,
+.large {
+  font-size: 2rem;
+}
+
 h2, .h2,
 h3, .h3,
 h4, .h4 {
   font-size: 1rem;
 }
 
-h5, .h5, h6, .h6 {
+h5, .h5,
+h6, .h6,
+.small {
   font-size: .75rem;
+}
+
+p,
+dl,
+ol,
+ul,
+pre,
+blockquote,
+hr {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+hr {
+  border: 0;
+  border-bottom: 1px solid;
 }
 
 .btn {
@@ -57,9 +81,6 @@ h5, .h5, h6, .h6 {
   box-shadow: inset 0 0 0 999px rgba(0, 0, 128, .25);
 }
 
-.sq1 { width: 3rem; height: 3rem; }
-.sq2 { width: 6rem; height: 6rem; }
-
 .black { color: #111 }
 .white { color: #fff }
 .navy  { color: #047 }
@@ -73,8 +94,4 @@ h5, .h5, h6, .h6 {
 .bg-blue  { background-color: #08b }
 .bg-aqua  { background-color: #0be }
 .bg-red   { background-color: #f53 }
-
-.bg-gray  { background-color: #777c80 }
-  .bg-gray  { background-color: #999ea0 }
-  .bg-gray  { background-color: #d0d6e6 }
 
